Fix image paths for GitHub Pages

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
         /* --- Hero Section --- */
         .hero {
             height: 100vh;
-            background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.15)), url('../photo/public/1.jpg') no-repeat center center/cover;
+            background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.15)), url('photo/public/1.jpg') no-repeat center center/cover;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -1029,7 +1029,7 @@
     <!-- Navigation -->
     <nav id="navbar">
         <a href="#home" class="logo">
-            <img src="../photo/logo.jpg" alt="Logo">
+            <img src="photo/logo.jpg" alt="Logo">
             <div class="logo-text-wrapper">
                 <span class="logo-cn">迪噢叢林旅宿</span>
                 <span class="logo-en">The Jungle House</span>
@@ -1086,7 +1086,7 @@
                 </div>
                 <div class="magazine-img-wrapper" data-aos="fade-left">
                     <div class="magazine-img-deco"></div>
-                    <img src="../photo/house.png" alt="House" class="magazine-img">
+                    <img src="photo/house.png" alt="House" class="magazine-img">
                 </div>
             </div>
 
@@ -1099,32 +1099,32 @@
                 </div>
                 <div class="carousel-wrapper">
                     <div class="carousel-track" id="carouselTrack">
-                        <div class="slide" style="background-image: url('../photo/public/1.jpg')" onclick="openPublicGallery(0)"></div>
-                        <div class="slide" style="background-image: url('../photo/public/13f9dfb0-51cb-4609-a8a6-91eb6b8c49f5.jpg')" onclick="openPublicGallery(1)"></div>
-                        <div class="slide" style="background-image: url('../photo/public/61a30a02-9f6e-4b15-8ebc-f95c90b50795.jpg')" onclick="openPublicGallery(2)"></div>
-                        <div class="slide" style="background-image: url('../photo/public/946ccc8f-9fe0-489c-ac01-7316012406f2.jpg')" onclick="openPublicGallery(3)"></div>
-                        <div class="slide" style="background-image: url('../photo/public/97614d0c-b07f-4ce9-be2e-ba31bf209a2b.jpg')" onclick="openPublicGallery(4)"></div>
-                        <div class="slide" style="background-image: url('../photo/public/b36b316b-d146-4fc4-81de-00e0678654f0.jpg')" onclick="openPublicGallery(5)"></div>
-                        <div class="slide" style="background-image: url('../photo/public/b9da8ff2-7548-445c-b0e4-b6302bcd5a93.jpg')" onclick="openPublicGallery(6)"></div>
-                        <div class="slide" style="background-image: url('../photo/public/bd1f216e-ad6f-4960-a3d3-020e3066d203.jpg')" onclick="openPublicGallery(7)"></div>
-                        <div class="slide" style="background-image: url('../photo/public/ea16cd1f-9208-4c35-bf03-796b2d5ef723.jpg')" onclick="openPublicGallery(8)"></div>
-                        <div class="slide" style="background-image: url('../photo/public/ed87c697-3e0b-4e85-8248-7d2dbde39de2.jpg')" onclick="openPublicGallery(9)"></div>
+                        <div class="slide" style="background-image: url('photo/public/1.jpg')" onclick="openPublicGallery(0)"></div>
+                        <div class="slide" style="background-image: url('photo/public/13f9dfb0-51cb-4609-a8a6-91eb6b8c49f5.jpg')" onclick="openPublicGallery(1)"></div>
+                        <div class="slide" style="background-image: url('photo/public/61a30a02-9f6e-4b15-8ebc-f95c90b50795.jpg')" onclick="openPublicGallery(2)"></div>
+                        <div class="slide" style="background-image: url('photo/public/946ccc8f-9fe0-489c-ac01-7316012406f2.jpg')" onclick="openPublicGallery(3)"></div>
+                        <div class="slide" style="background-image: url('photo/public/97614d0c-b07f-4ce9-be2e-ba31bf209a2b.jpg')" onclick="openPublicGallery(4)"></div>
+                        <div class="slide" style="background-image: url('photo/public/b36b316b-d146-4fc4-81de-00e0678654f0.jpg')" onclick="openPublicGallery(5)"></div>
+                        <div class="slide" style="background-image: url('photo/public/b9da8ff2-7548-445c-b0e4-b6302bcd5a93.jpg')" onclick="openPublicGallery(6)"></div>
+                        <div class="slide" style="background-image: url('photo/public/bd1f216e-ad6f-4960-a3d3-020e3066d203.jpg')" onclick="openPublicGallery(7)"></div>
+                        <div class="slide" style="background-image: url('photo/public/ea16cd1f-9208-4c35-bf03-796b2d5ef723.jpg')" onclick="openPublicGallery(8)"></div>
+                        <div class="slide" style="background-image: url('photo/public/ed87c697-3e0b-4e85-8248-7d2dbde39de2.jpg')" onclick="openPublicGallery(9)"></div>
                     </div>
                     <button class="carousel-btn prev" id="prevBtn"><i class="fas fa-chevron-left"></i></button>
                     <button class="carousel-btn next" id="nextBtn"><i class="fas fa-chevron-right"></i></button>
                 </div>
                 <!-- Hidden Lightbox Links for Public Space -->
                 <div style="display:none;">
-                    <a href="../photo/public/1.jpg" data-lightbox="public"></a>
-                    <a href="../photo/public/13f9dfb0-51cb-4609-a8a6-91eb6b8c49f5.jpg" data-lightbox="public"></a>
-                    <a href="../photo/public/61a30a02-9f6e-4b15-8ebc-f95c90b50795.jpg" data-lightbox="public"></a>
-                    <a href="../photo/public/946ccc8f-9fe0-489c-ac01-7316012406f2.jpg" data-lightbox="public"></a>
-                    <a href="../photo/public/97614d0c-b07f-4ce9-be2e-ba31bf209a2b.jpg" data-lightbox="public"></a>
-                    <a href="../photo/public/b36b316b-d146-4fc4-81de-00e0678654f0.jpg" data-lightbox="public"></a>
-                    <a href="../photo/public/b9da8ff2-7548-445c-b0e4-b6302bcd5a93.jpg" data-lightbox="public"></a>
-                    <a href="../photo/public/bd1f216e-ad6f-4960-a3d3-020e3066d203.jpg" data-lightbox="public"></a>
-                    <a href="../photo/public/ea16cd1f-9208-4c35-bf03-796b2d5ef723.jpg" data-lightbox="public"></a>
-                    <a href="../photo/public/ed87c697-3e0b-4e85-8248-7d2dbde39de2.jpg" data-lightbox="public"></a>
+                    <a href="photo/public/1.jpg" data-lightbox="public"></a>
+                    <a href="photo/public/13f9dfb0-51cb-4609-a8a6-91eb6b8c49f5.jpg" data-lightbox="public"></a>
+                    <a href="photo/public/61a30a02-9f6e-4b15-8ebc-f95c90b50795.jpg" data-lightbox="public"></a>
+                    <a href="photo/public/946ccc8f-9fe0-489c-ac01-7316012406f2.jpg" data-lightbox="public"></a>
+                    <a href="photo/public/97614d0c-b07f-4ce9-be2e-ba31bf209a2b.jpg" data-lightbox="public"></a>
+                    <a href="photo/public/b36b316b-d146-4fc4-81de-00e0678654f0.jpg" data-lightbox="public"></a>
+                    <a href="photo/public/b9da8ff2-7548-445c-b0e4-b6302bcd5a93.jpg" data-lightbox="public"></a>
+                    <a href="photo/public/bd1f216e-ad6f-4960-a3d3-020e3066d203.jpg" data-lightbox="public"></a>
+                    <a href="photo/public/ea16cd1f-9208-4c35-bf03-796b2d5ef723.jpg" data-lightbox="public"></a>
+                    <a href="photo/public/ed87c697-3e0b-4e85-8248-7d2dbde39de2.jpg" data-lightbox="public"></a>
                 </div>
             </div>
         </div>
@@ -1142,12 +1142,12 @@
             <div class="room-grid">
                 <!-- Room 1 -->
                 <div class="room-card" data-aos="fade-up">
-                    <a href="../photo/double/1.jpg" data-lightbox="double">
-                        <div class="room-img" style="background-image: url('../photo/double/1.jpg')"></div>
+                    <a href="photo/double/1.jpg" data-lightbox="double">
+                        <div class="room-img" style="background-image: url('photo/double/1.jpg')"></div>
                     </a>
                     <div style="display:none;">
-                        <a href="../photo/double/img_3655.jpg" data-lightbox="double"></a>
-                        <a href="../photo/double/img_3656.jpg" data-lightbox="double"></a>
+                        <a href="photo/double/img_3655.jpg" data-lightbox="double"></a>
+                        <a href="photo/double/img_3656.jpg" data-lightbox="double"></a>
                     </div>
                     <div class="room-info">
                         <h3 class="serif">雙人房</h3>
@@ -1160,12 +1160,12 @@
                 </div>
                 <!-- Room 2 -->
                 <div class="room-card" data-aos="fade-up" data-aos-delay="100">
-                    <a href="../photo/quad/1.jpg" data-lightbox="quad">
-                        <div class="room-img" style="background-image: url('../photo/quad/1.jpg')"></div>
+                    <a href="photo/quad/1.jpg" data-lightbox="quad">
+                        <div class="room-img" style="background-image: url('photo/quad/1.jpg')"></div>
                     </a>
                     <div style="display:none;">
-                        <a href="../photo/quad/_bc_9870-hdr.jpg" data-lightbox="quad"></a>
-                        <a href="../photo/quad/_bc_9875-hdr.jpg" data-lightbox="quad"></a>
+                        <a href="photo/quad/_bc_9870-hdr.jpg" data-lightbox="quad"></a>
+                        <a href="photo/quad/_bc_9875-hdr.jpg" data-lightbox="quad"></a>
                     </div>
                     <div class="room-info">
                         <h3 class="serif">四人房</h3>
@@ -1178,14 +1178,14 @@
                 </div>
                 <!-- Room 3 -->
                 <div class="room-card" data-aos="fade-up" data-aos-delay="200">
-                    <a href="../photo/loft-6/1.jpg" data-lightbox="loft-6">
-                        <div class="room-img" style="background-image: url('../photo/loft-6/1.jpg')"></div>
+                    <a href="photo/loft-6/1.jpg" data-lightbox="loft-6">
+                        <div class="room-img" style="background-image: url('photo/loft-6/1.jpg')"></div>
                     </a>
                     <div style="display:none;">
-                        <a href="../photo/loft-6/_bc_9902-hdr.jpg" data-lightbox="loft-6"></a>
-                        <a href="../photo/loft-6/_bc_9905.jpg" data-lightbox="loft-6"></a>
-                        <a href="../photo/loft-6/img_3671.jpg" data-lightbox="loft-6"></a>
-                        <a href="../photo/loft-6/img_3672.jpg" data-lightbox="loft-6"></a>
+                        <a href="photo/loft-6/_bc_9902-hdr.jpg" data-lightbox="loft-6"></a>
+                        <a href="photo/loft-6/_bc_9905.jpg" data-lightbox="loft-6"></a>
+                        <a href="photo/loft-6/img_3671.jpg" data-lightbox="loft-6"></a>
+                        <a href="photo/loft-6/img_3672.jpg" data-lightbox="loft-6"></a>
                     </div>
                     <div class="room-info">
                         <h3 class="serif">樓中樓六人房</h3>
@@ -1198,13 +1198,13 @@
                 </div>
                 <!-- Room 4 -->
                 <div class="room-card" data-aos="fade-up">
-                    <a href="../photo/loft-4/1.jpg" data-lightbox="loft-4">
-                        <div class="room-img" style="background-image: url('../photo/loft-4/1.jpg')"></div>
+                    <a href="photo/loft-4/1.jpg" data-lightbox="loft-4">
+                        <div class="room-img" style="background-image: url('photo/loft-4/1.jpg')"></div>
                     </a>
                     <div style="display:none;">
-                        <a href="../photo/loft-4/_bc_9829.jpg" data-lightbox="loft-4"></a>
-                        <a href="../photo/loft-4/img_3666.jpg" data-lightbox="loft-4"></a>
-                        <a href="../photo/loft-4/img_3669.jpg" data-lightbox="loft-4"></a>
+                        <a href="photo/loft-4/_bc_9829.jpg" data-lightbox="loft-4"></a>
+                        <a href="photo/loft-4/img_3666.jpg" data-lightbox="loft-4"></a>
+                        <a href="photo/loft-4/img_3669.jpg" data-lightbox="loft-4"></a>
                     </div>
                     <div class="room-info">
                         <h3 class="serif">樓中樓四人房</h3>
@@ -1217,11 +1217,11 @@
                 </div>
                 <!-- Room 5 -->
                 <div class="room-card" data-aos="fade-up" data-aos-delay="100">
-                    <a href="../photo/loft-family/1.jpg" data-lightbox="loft-family">
-                        <div class="room-img" style="background-image: url('../photo/loft-family/1.jpg')"></div>
+                    <a href="photo/loft-family/1.jpg" data-lightbox="loft-family">
+                        <div class="room-img" style="background-image: url('photo/loft-family/1.jpg')"></div>
                     </a>
                     <div style="display:none;">
-                        <a href="../photo/loft-family/20200102_170033.jpg" data-lightbox="loft-family"></a>
+                        <a href="photo/loft-family/20200102_170033.jpg" data-lightbox="loft-family"></a>
                     </div>
                     <div class="room-info">
                         <h3 class="serif">樓中樓家庭房</h3>
@@ -1234,13 +1234,13 @@
                 </div>
                 <!-- Room 6 -->
                 <div class="room-card" data-aos="fade-up" data-aos-delay="200">
-                    <a href="../photo/kids-pink/1.jpg" data-lightbox="kids-pink">
-                        <div class="room-img" style="background-image: url('../photo/kids-pink/1.jpg')"></div>
+                    <a href="photo/kids-pink/1.jpg" data-lightbox="kids-pink">
+                        <div class="room-img" style="background-image: url('photo/kids-pink/1.jpg')"></div>
                     </a>
                     <div style="display:none;">
-                        <a href="../photo/kids-pink/20230714180000mpkwc.jpg" data-lightbox="kids-pink"></a>
-                        <a href="../photo/kids-pink/unnamed__1_.jpg" data-lightbox="kids-pink"></a>
-                        <a href="../photo/kids-pink/unnamed.jpg" data-lightbox="kids-pink"></a>
+                        <a href="photo/kids-pink/20230714180000mpkwc.jpg" data-lightbox="kids-pink"></a>
+                        <a href="photo/kids-pink/unnamed__1_.jpg" data-lightbox="kids-pink"></a>
+                        <a href="photo/kids-pink/unnamed.jpg" data-lightbox="kids-pink"></a>
                     </div>
                     <div class="room-info">
                         <h3 class="serif">親子家庭房 (粉)</h3>
@@ -1253,13 +1253,13 @@
                 </div>
                 <!-- Room 7 -->
                 <div class="room-card" data-aos="fade-up">
-                    <a href="../photo/kids-green/1.jpg" data-lightbox="kids-green">
-                        <div class="room-img" style="background-image: url('../photo/kids-green/1.jpg')"></div>
+                    <a href="photo/kids-green/1.jpg" data-lightbox="kids-green">
+                        <div class="room-img" style="background-image: url('photo/kids-green/1.jpg')"></div>
                     </a>
                     <div style="display:none;">
-                        <a href="../photo/kids-green/5c2abf67-9b82-486c-afb0-a91910226c23.jpg" data-lightbox="kids-green"></a>
-                        <a href="../photo/kids-green/6a30eefe-f091-4c5a-a8c8-d2028347cbc0.jpg" data-lightbox="kids-green"></a>
-                        <a href="../photo/kids-green/ee87f50a-9dca-431d-b892-3c312d8c32bc.jpg" data-lightbox="kids-green"></a>
+                        <a href="photo/kids-green/5c2abf67-9b82-486c-afb0-a91910226c23.jpg" data-lightbox="kids-green"></a>
+                        <a href="photo/kids-green/6a30eefe-f091-4c5a-a8c8-d2028347cbc0.jpg" data-lightbox="kids-green"></a>
+                        <a href="photo/kids-green/ee87f50a-9dca-431d-b892-3c312d8c32bc.jpg" data-lightbox="kids-green"></a>
                     </div>
                     <div class="room-info">
                         <h3 class="serif">親子家庭房 (綠)</h3>
