Fix image display issues by removing underscores from filenames

--- a/index.html
+++ b/index.html
@@ -1164,8 +1164,8 @@
                         <div class="room-img" style="background-image: url('photo/quad/1.jpg')"></div>
                     </a>
                     <div style="display:none;">
-                        <a href="photo/quad/_bc_9870-hdr.jpg" data-lightbox="quad"></a>
-                        <a href="photo/quad/_bc_9875-hdr.jpg" data-lightbox="quad"></a>
+                        <a href="photo/quad/bc_9870-hdr.jpg" data-lightbox="quad"></a>
+                        <a href="photo/quad/bc_9875-hdr.jpg" data-lightbox="quad"></a>
                     </div>
                     <div class="room-info">
                         <h3 class="serif">四人房</h3>
@@ -1182,8 +1182,8 @@
                         <div class="room-img" style="background-image: url('photo/loft-6/1.jpg')"></div>
                     </a>
                     <div style="display:none;">
-                        <a href="photo/loft-6/_bc_9902-hdr.jpg" data-lightbox="loft-6"></a>
-                        <a href="photo/loft-6/_bc_9905.jpg" data-lightbox="loft-6"></a>
+                        <a href="photo/loft-6/bc_9902-hdr.jpg" data-lightbox="loft-6"></a>
+                        <a href="photo/loft-6/bc_9905.jpg" data-lightbox="loft-6"></a>
                         <a href="photo/loft-6/img_3671.jpg" data-lightbox="loft-6"></a>
                         <a href="photo/loft-6/img_3672.jpg" data-lightbox="loft-6"></a>
                     </div>
@@ -1202,7 +1202,7 @@
                         <div class="room-img" style="background-image: url('photo/loft-4/1.jpg')"></div>
                     </a>
                     <div style="display:none;">
-                        <a href="photo/loft-4/_bc_9829.jpg" data-lightbox="loft-4"></a>
+                        <a href="photo/loft-4/bc_9829.jpg" data-lightbox="loft-4"></a>
                         <a href="photo/loft-4/img_3666.jpg" data-lightbox="loft-4"></a>
                         <a href="photo/loft-4/img_3669.jpg" data-lightbox="loft-4"></a>
                     </div>
