--- a/index.html
+++ b/index.html
@@ -194,24 +194,34 @@
         .nav-links.active {
             display: flex !important;
             position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100vh;
-            background-color: rgba(26, 47, 47, 1); /* 確保背景不透明 */
+            top: 20px;
+            right: 20px;
+            width: 250px;
+            height: auto;
+            background-color: rgba(26, 47, 47, 0.98);
             flex-direction: column;
-            justify-content: center;
+            justify-content: flex-start;
             align-items: center;
-            z-index: 10000; /* 確保選單 z-index 高於 10000 */
+            padding: 60px 0 30px;
+            border-radius: 20px;
+            box-shadow: 0 15px 35px rgba(0, 0, 0, 0.3);
+            z-index: 10000;
+            backdrop-filter: blur(15px);
+            border: 1px solid rgba(255, 255, 255, 0.1);
         }
 
         .nav-links.active li {
-            margin: 20px 0;
+            margin: 12px 0;
+            width: 100%;
+            text-align: center;
         }
 
         .nav-links.active a {
-            font-size: 1.5rem;
+            font-size: 1.1rem;
             color: var(--white) !important;
+            display: block;
+            padding: 8px 0;
+            letter-spacing: 3px;
         }
 
         .menu-toggle {
