--- a/index.html
+++ b/index.html
@@ -194,34 +194,35 @@
         .nav-links.active {
             display: flex !important;
             position: fixed;
-            top: 20px;
-            right: 20px;
-            width: 250px;
+            top: 15px;
+            right: 15px;
+            width: 220px;
             height: auto;
-            background-color: rgba(26, 47, 47, 0.98);
+            max-height: calc(100vh - 30px);
+            background-color: rgba(26, 47, 47, 0.95);
             flex-direction: column;
-            justify-content: flex-start;
-            align-items: center;
-            padding: 60px 0 30px;
-            border-radius: 20px;
-            box-shadow: 0 15px 35px rgba(0, 0, 0, 0.3);
+            justify-content: center;
+            align-items: flex-start;
+            padding: 40px 0 25px 35px;
+            border-radius: 15px;
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.4);
             z-index: 10000;
             backdrop-filter: blur(15px);
             border: 1px solid rgba(255, 255, 255, 0.1);
         }
 
         .nav-links.active li {
-            margin: 12px 0;
+            margin: 0;
             width: 100%;
-            text-align: center;
+            text-align: left;
         }
 
         .nav-links.active a {
-            font-size: 1.1rem;
+            font-size: 1rem;
             color: var(--white) !important;
             display: block;
-            padding: 8px 0;
-            letter-spacing: 3px;
+            padding: 6px 0;
+            letter-spacing: 2px;
         }
 
         .menu-toggle {
