style: optimize amenities grid for mobile (3 columns)

--- a/index.html
+++ b/index.html
@@ -1050,6 +1050,21 @@
             .highlight-price { font-size: 1.3rem; }
             .fab-container { bottom: 30px; right: 30px; }
             .fab { width: 55px; height: 55px; font-size: 1.3rem; }
+
+            /* 設施指南網格化優化 */
+            .amenities-grid {
+                grid-template-columns: repeat(3, 1fr);
+                gap: 20px 10px;
+            }
+            .amenity-box i {
+                font-size: 1.5rem;
+                margin-bottom: 8px;
+            }
+            .amenity-box span {
+                font-size: 0.75rem;
+                display: block;
+                line-height: 1.2;
+            }
         }
     </style>
 </head>
