--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>迪噢叢林旅宿 | The Jungle House - 恆春墾丁包棟民宿</title>
-    <meta name="description" content="恆春墾丁包棟民宿首選，The Jungle House 迪噢叢林旅宿。提供KTV、烤肉設備、麻將、寵物友善住宿。適合家族旅遊、員工旅遊、好友聚會。鄰近南灣，享受隱密與便利兼具的度假體驗。">
-    <meta name="keywords" content="墾丁包棟, 恆春包棟, 寵物友善民宿, 墾丁KTV民宿, 墾丁烤肉民宿, 家族旅遊, 員工旅遊, The Jungle House">
+    <title>迪噢叢林旅宿 | The Jungle House - 恆春墾丁包棟民宿首選</title>
+    <meta name="description" content="迪噢叢林旅宿提供優質恆春包棟與墾丁包棟服務，Google 4.7星好評推薦！我們是優質墾丁寵物友善民宿，鄰近恆春市區全聯與南灣，提供專業KTV與烤肉設備，是家族旅遊、員工旅遊首選。">
+    <meta name="keywords" content="墾丁包棟, 恆春包棟, 寵物友善民宿, 墾丁KTV民宿, 墾丁烤肉民宿, 家族旅遊, 員工旅遊, The Jungle House, 恆春民宿推薦">
     
     <!-- JSON-LD Structured Data -->
     <script type="application/ld+json">
@@ -1102,6 +1102,52 @@
             opacity: 0.3;
         }
 
+        /* --- Local SEO Block --- */
+        .local-seo-section {
+            background: var(--white);
+            padding: 60px 0;
+            border-top: 1px solid #eee;
+        }
+
+        .landmark-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 30px;
+            margin-top: 30px;
+        }
+
+        .landmark-item {
+            display: flex;
+            align-items: center;
+            gap: 15px;
+            padding: 20px;
+            background: #fdfdfd;
+            border-radius: 10px;
+            transition: var(--transition);
+        }
+
+        .landmark-item:hover {
+            background: #fff;
+            box-shadow: var(--shadow);
+        }
+
+        .landmark-item i {
+            font-size: 1.5rem;
+            color: var(--accent);
+        }
+
+        .landmark-info h4 {
+            font-size: 1rem;
+            margin-bottom: 5px;
+            color: var(--primary);
+        }
+
+        .landmark-info p {
+            font-size: 0.85rem;
+            color: #888;
+            margin: 0;
+        }
+
         /* --- Contact --- */
         .contact-grid {
             display: grid;
@@ -1158,19 +1204,25 @@
         .line-btn {
             display: inline-flex;
             align-items: center;
-            gap: 12px;
+            gap: 15px;
             background: #00B900;
             color: white;
-            padding: 15px 30px;
+            padding: 12px 30px 12px 12px;
             text-decoration: none;
-            font-weight: 600;
-            border-radius: 0;
+            font-weight: 700;
+            border-radius: 8px;
             margin-top: 15px;
             transition: var(--transition);
-            font-size: 0.9rem;
+            font-size: 1rem;
             letter-spacing: 1px;
             /* Add animation */
             animation: pulse-glow 2.5s infinite ease-in-out;
+        }
+
+        .line-btn img {
+            height: 45px;
+            width: 45px;
+            border-radius: 4px;
         }
 
         .line-btn:hover {
@@ -1296,14 +1348,14 @@
 <body>
 
     <!-- 植物裝飾 -->
-    <img src="https://www.transparentpng.com/download/tropical-leaves/tropical-leaves-png-images-5.png" class="leaf-decoration leaf-1" alt="deco">
-    <img src="https://www.transparentpng.com/download/tropical-leaves/tropical-green-leaves-png-11.png" class="leaf-decoration leaf-2" alt="deco">
-    <img src="https://www.transparentpng.com/download/tropical-leaves/tropical-leaves-png-images-5.png" class="leaf-decoration leaf-3" alt="deco">
+    <img src="https://www.transparentpng.com/download/tropical-leaves/tropical-leaves-png-images-5.png" class="leaf-decoration leaf-1" alt="迪噢叢林旅宿-南洋風植物裝飾-1" loading="lazy">
+    <img src="https://www.transparentpng.com/download/tropical-leaves/tropical-green-leaves-png-11.png" class="leaf-decoration leaf-2" alt="迪噢叢林旅宿-南洋風植物裝飾-2" loading="lazy">
+    <img src="https://www.transparentpng.com/download/tropical-leaves/tropical-leaves-png-images-5.png" class="leaf-decoration leaf-3" alt="迪噢叢林旅宿-南洋風植物裝飾-3" loading="lazy">
 
     <!-- Navigation -->
     <nav id="navbar">
         <a href="#home" class="logo">
-            <img src="photo/logo.jpg" alt="Logo">
+            <img src="photo/logo.jpg" alt="迪噢叢林旅宿-恆春包棟首選-Logo">
             <div class="logo-text-wrapper">
                 <span class="logo-cn">迪噢叢林旅宿</span>
                 <span class="logo-en">The Jungle House</span>
@@ -1326,12 +1378,12 @@
     </nav>
 
     <!-- Hero Banner -->
-    <section id="home" class="hero">
+    <header id="home" class="hero">
         <div class="hero-content" data-aos="fade-up" data-aos-duration="1500" style="margin-top: 200px;">
             <h1 class="hero-title serif">The Jungle House</h1>
             <a href="#rooms" class="btn">Discover More</a>
         </div>
-    </section>
+    </header>
 
     <!-- About Section (Magazine Style) -->
     <section id="about">
@@ -1356,23 +1408,23 @@
                     <div class="magazine-text">
                         <p>在國境之南的恆春半島，有一處被大片翠綠草原擁抱的隱密境地。「迪噢叢林旅宿」不僅是一座建築，更是我們為嚮往自由的靈魂所打造的避風港。在這裡，清晨的第一縷陽光會穿過葉縫灑落在您的床頭，而遠方海風攜帶的微鹹氣息，正輕輕訴說著南國的浪漫。</p>
                         <p>我們深信旅行的真諦在於「連結」——與自然的連結、與摯友的暢談、以及與家人的溫馨時刻。整棟別墅設計融合了原始與現代，讓您在享受頂級設施的同時，亦能感受到大地最原始的律動。無論是在池畔舉杯，還是仰望恆春最純粹的星空，這裡的每一刻，都值得您屏息珍藏。</p>
-                        <p>雖然身處世外桃源般的靜謐，但您並未與世界脫節。步行可達的全聯與便利商店，以及短短 10 分鐘車程即可抵達的南灣湛藍海域，讓您的渡假生活在便利與夢幻之間取得完美平衡。</p>
+                        <p>雖然身處世外桃源般的靜謐，但您並未與世界脫節。附近就有全聯與便利商店2分鐘到市區，以及短短 10 分鐘車程即可抵達的南灣湛藍海域，讓您的渡假生活在便利與夢幻之間取得完美平衡。</p>
                     </div>
                 </div>
                 <div class="magazine-img-wrapper" data-aos="fade-left">
                     <div class="magazine-img-deco"></div>
-                    <img src="photo/house.png" alt="House" class="magazine-img">
+                    <img src="photo/house.png" alt="迪噢叢林旅宿-恆春包棟民宿外觀實景" class="magazine-img" loading="lazy">
                 </div>
             </div>
 
             <!-- Video Player Block -->
             <div class="video-block" style="margin-top: 150px;" data-aos="fade-up">
                 <div class="section-title">
-                    <h3 class="serif" style="font-size: 2.2rem; color: var(--primary);">走進迪噢叢林：民宿實景直擊</h3>
+                    <h2 class="serif" style="font-size: 2.2rem; color: var(--primary);">走進迪噢叢林：民宿實景直擊</h2>
                     <div class="divider"></div>
                 </div>
                 <div class="video-container">
-                    <iframe src="https://www.youtube.com/embed/0O0CjaxXg9Y" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe src="https://www.youtube.com/embed/0O0CjaxXg9Y" title="迪噢叢林旅宿實景影片" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy"></iframe>
                 </div>
             </div>
 
@@ -1380,13 +1432,13 @@
             <div class="carousel-container" id="shared-space" data-aos="fade-up">
                 <div class="section-title">
                     <span>Public Space</span>
-                    <h3 class="serif" style="font-size: 2.2rem; color: var(--primary);">共享時光空間</h3>
+                    <h2 class="serif" style="font-size: 2.2rem; color: var(--primary);">共享時光空間</h2>
                     <div class="divider"></div>
                 </div>
                 <div class="carousel-wrapper">
                     <div class="carousel-track" id="carouselTrack">
                         <!-- Slide 1 -->
-                        <a href="photo/public/1.jpg" data-fancybox="public" data-caption="公共空間 1" class="slide" style="background-image: url('photo/public/1.jpg')"></a>
+                        <a href="photo/public/1.jpg" data-fancybox="public" data-caption="公共空間-客廳與KTV" class="slide" style="background-image: url('photo/public/1.jpg')"></a>
                         <!-- Slide 2 -->
                         <a href="photo/public/13f9dfb0-51cb-4609-a8a6-91eb6b8c49f5.jpg" data-fancybox="public" class="slide" style="background-image: url('photo/public/13f9dfb0-51cb-4609-a8a6-91eb6b8c49f5.jpg')"></a>
                         <!-- Slide 3 -->
@@ -1557,7 +1609,7 @@
 
             <!-- Global Amenities -->
             <div class="global-amenities" data-aos="fade-up">
-                <h3 class="serif">設施指南</h3>
+                <h2 class="serif">設施指南</h2>
                 <div class="amenities-grid">
                     <div class="amenity-box"><i class="fas fa-parking"></i><span>專屬停車場</span></div>
                     <div class="amenity-box"><i class="fas fa-microphone"></i><span>專業KTV設備</span></div>
@@ -1777,23 +1829,56 @@
                             <h4 class="serif">官方 LINE</h4>
                             <p>ID: @dioinn</p>
                             <a href="https://lin.ee/ONZERGg" target="_blank" class="line-btn">
-                                <i class="fab fa-line"></i> 一鍵加 LINE 預約
+                                <img src="https://upload.wikimedia.org/wikipedia/commons/4/41/LINE_logo.svg" alt="一鍵加LINE預約迪噢叢林旅宿">
+                                <span>一鍵加 LINE 預約</span>
                             </a>
                         </div>
                     </div>
                 </div>
                 <div class="map-container" data-aos="fade-left">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3690.046808794695!2d120.73759077600649!3d21.98771467615965!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3471b18e321a002b%3A0x717bceed466f479e!2z6ka45Zm05Y6y5p6X5peF5a6_!5e0!3m2!1szh-TW!2stw!4v1740000000000!5m2!1szh-TW!2stw" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3690.046808794695!2d120.73759077600649!3d21.98771467615965!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3471b18e321a002b%3A0x717bceed466f479e!2z6ka45Zm05Y6y5p6X5peF5a6_!5e0!3m2!1szh-TW!2stw!4v1740000000000!5m2!1szh-TW!2stw" width="100%" height="100%" style="border:0;" allowfullscreen="" title="迪噢叢林旅宿 Google 地圖位置" loading="lazy"></iframe>
                 </div>
             </div>
         </div>
     </section>
 
-    <!-- FAB -->
+    <!-- Local SEO Landmarks Block -->
+    <section class="local-seo-section">
+        <div class="container">
+            <div class="section-title" data-aos="fade-up" style="margin-bottom: 50px;">
+                <h2 class="serif" style="font-size: 1.8rem; color: var(--primary);">鄰近地標與交通</h2>
+                <p style="font-size: 0.9rem; color: #666; margin-top: 10px;">位於恆春市區核心，出入便利</p>
+            </div>
+            <div class="landmark-grid" data-aos="fade-up">
+                <div class="landmark-item">
+                    <i class="fas fa-shopping-cart"></i>
+                    <div class="landmark-info">
+                        <h4>全聯福利中心</h4>
+                        <p>車程約 3 分鐘，採買食材超方便</p>
+                    </div>
+                </div>
+                <div class="landmark-item">
+                    <i class="fas fa-umbrella-beach"></i>
+                    <div class="landmark-info">
+                        <h4>南灣海灘</h4>
+                        <p>車程約 10 分鐘，享受湛藍大海</p>
+                    </div>
+                </div>
+                <div class="landmark-item">
+                    <i class="fas fa-archway"></i>
+                    <div class="landmark-info">
+                        <h4>恆春古城 / 市區</h4>
+                        <p>車程約 2 分鐘，美食匯集地</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <div class="fab-container">
-        <a href="https://lin.ee/ONZERGg" target="_blank" class="fab line"><i class="fab fa-line"></i></a>
-        <a href="https://www.facebook.com/share/1WunjJuJtg/?mibextid=wwXIfr" target="_blank" class="fab fb"><i class="fab fa-facebook-f"></i></a>
-        <a href="https://www.instagram.com/thejunglehousexdioinn" target="_blank" class="fab ig"><i class="fab fa-instagram"></i></a>
+        <a href="https://lin.ee/ONZERGg" target="_blank" class="fab line" aria-label="加LINE聯繫"><i class="fab fa-line"></i></a>
+        <a href="https://www.facebook.com/share/1WunjJuJtg/?mibextid=wwXIfr" target="_blank" class="fab fb" aria-label="Facebook專頁"><i class="fab fa-facebook-f"></i></a>
+        <a href="https://www.instagram.com/thejunglehousexdioinn" target="_blank" class="fab ig" aria-label="Instagram專頁"><i class="fab fa-instagram"></i></a>
     </div>
 
     <footer>
