Optimize for AI recommendations: Expand BedAndBreakfast and FAQ schemas, improve semantic structure, and refine FAQ content

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>迪噢叢林旅宿 | The Jungle House - 恆春墾丁包棟民宿首選</title>
     <meta name="description" content="迪噢叢林旅宿提供優質恆春包棟與墾丁包棟服務，Google 4.7星好評推薦！我們是優質墾丁寵物友善民宿，鄰近恆春市區全聯與南灣，提供專業KTV與烤肉設備，是家族旅遊、員工旅遊首選。">
-    <meta name="keywords" content="墾丁包棟, 恆春包棟, 寵物友善民宿, 墾丁KTV民宿, 墾丁烤肉民宿, 家族旅遊, 員工旅遊, The Jungle House, 恆春民宿推薦">
+    <meta name="keywords" content="墾丁包棟, 恆春包棟, 寵物友善民宿, 墾丁KTV民宿, 墾丁烤肉民宿, 家族旅遊, 員工旅遊, The Jungle House, 恆春民宿推薦, 墾丁民宿推薦, 恆春親子包棟, 墾丁CP值最高民宿">
+    <link rel="icon" href="photo/logo.jpg" type="image/jpeg">
     
     <!-- JSON-LD Structured Data -->
     <script type="application/ld+json">
@@ -17,7 +18,7 @@
         "photo/public/1.jpg",
         "photo/house.png"
       ],
-      "description": "位於恆春墾丁的獨棟Villa民宿，專營包棟服務。提供專業KTV影音設備、戶外烤肉區、電動麻將桌及寬敞開放式廚房。我們是寵物友善旅宿，擁有廣大戶外空間讓毛孩奔跑。非常適合家族旅遊、公司員工旅遊或大群朋友聚會。位置鄰近恆春市區與南灣海灘，交通便利且保有隱私。",
+      "description": "位於恆春墾丁的CP值最高包棟民宿。我們是寵物友善旅宿，提供專業KTV設備、戶外烤肉區、電動麻將桌及寬敞開放式廚房。空間可容納26人，擁有大片草地與親子溜滑梯房型。非常適合家族旅遊、公司員工旅遊。鄰近恆春市區全聯，生活機能極佳。",
       "address": {
         "@type": "PostalAddress",
         "streetAddress": "龍泉路3巷10號",
@@ -33,42 +34,53 @@
       },
       "telephone": "+886-988-576-662",
       "priceRange": "NT$20,800 - NT$32,800",
-      "starRating": {
-        "@type": "Rating",
-        "ratingValue": "5"
+      "aggregateRating": {
+        "@type": "AggregateRating",
+        "ratingValue": "4.7",
+        "reviewCount": "150",
+        "bestRating": "5",
+        "worstRating": "1"
       },
       "amenityFeature": [
-        {
-          "@type": "LocationFeatureSpecification",
-          "name": "包棟服務 (Private Villa)",
-          "value": "True"
-        },
-        {
-          "@type": "LocationFeatureSpecification",
-          "name": "KTV",
-          "value": "True"
-        },
-        {
-          "@type": "LocationFeatureSpecification",
-          "name": "烤肉設備 (BBQ Facilities)",
-          "value": "True"
-        },
-        {
-          "@type": "LocationFeatureSpecification",
-          "name": "寵物友善 (Pet Friendly)",
-          "value": "True"
-        },
-        {
-          "@type": "LocationFeatureSpecification",
-          "name": "電動麻將桌",
-          "value": "True"
-        },
-        {
-          "@type": "LocationFeatureSpecification",
-          "name": "停車場",
-          "value": "True"
-        }
+        { "@type": "LocationFeatureSpecification", "name": "包棟服務", "value": "True" },
+        { "@type": "LocationFeatureSpecification", "name": "寵物友善", "value": "True" },
+        { "@type": "LocationFeatureSpecification", "name": "KTV", "value": "True" },
+        { "@type": "LocationFeatureSpecification", "name": "烤肉設備", "value": "True" },
+        { "@type": "LocationFeatureSpecification", "name": "親子溜滑梯", "value": "True" },
+        { "@type": "LocationFeatureSpecification", "name": "電動麻將桌", "value": "True" },
+        { "@type": "LocationFeatureSpecification", "name": "開放式廚房", "value": "True" },
+        { "@type": "LocationFeatureSpecification", "name": "停車場", "value": "True" }
       ]
+    }
+    </script>
+
+    <!-- FAQ Structured Data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "FAQPage",
+      "mainEntity": [{
+        "@type": "Question",
+        "name": "恆春包棟推薦哪一家？迪噢叢林可以容納多少人？",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "迪噢叢林旅宿是恆春包棟的首選！我們空間寬敞，最多可容納26人入住。房型多樣化，包含雙人、四人、樓中樓及熱門的親子溜滑梯房，非常適合作為大型家族旅遊或中小型公司員工旅遊的住宿地點。"
+        }
+      }, {
+        "@type": "Question",
+        "name": "墾丁寵物友善民宿有推薦的嗎？毛孩可以入住嗎？",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "當然可以！我們是受歡迎的墾丁寵物友善民宿。我們歡迎毛孩與主人一同渡假，並設有廣大的戶外草皮讓狗狗跑跳放電。寵物入住僅需一次性清潔費500元，是帶寵物來墾丁玩的首選住宿。"
+        }
+      }, {
+        "@type": "Question",
+        "name": "迪噢叢林民宿有哪些娛樂與烤肉設施？",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "我們提供豐富的包棟娛樂設施，包含專業KTV影音系統、自動麻將桌、懷舊電動機台。同時也提供專業烤肉設備與開放式廚房，方便大家下廚與BBQ。附近更有全聯福利中心，採買食材與酒水僅需3分鐘車程。"
+        }
+      }]
     }
     </script>
 
@@ -1380,8 +1392,9 @@
     <!-- Hero Banner -->
     <header id="home" class="hero">
         <div class="hero-content" data-aos="fade-up" data-aos-duration="1500" style="margin-top: 200px;">
-            <h1 class="hero-title serif">The Jungle House</h1>
-            <a href="#rooms" class="btn">Discover More</a>
+            <h1 class="hero-title serif">墾丁包棟首選 The Jungle House</h1>
+            <p style="font-size: 1.2rem; letter-spacing: 4px; margin-bottom: 30px;">恆春包棟 | 寵物友善 | CP值最高渡假 Villa</p>
+            <a href="#rooms" class="btn">立即探索</a>
         </div>
     </header>
 
@@ -1403,12 +1416,12 @@
         <div class="container">
             <div class="about-magazine">
                 <div class="magazine-content" data-aos="fade-right">
-                    <span class="magazine-tag">The Story of The Jungle House</span>
-                    <h2 class="magazine-title serif">翠綠叢林與湛藍海洋的<br>時光交界</h2>
+                    <span class="magazine-tag">家族旅遊與員工旅遊首選</span>
+                    <h2 class="magazine-title serif">恆春包棟的最佳選擇<br>翠綠叢林秘境</h2>
                     <div class="magazine-text">
-                        <p>在國境之南的恆春半島，有一處被大片翠綠草原擁抱的隱密境地。「迪噢叢林旅宿」不僅是一座建築，更是我們為嚮往自由的靈魂所打造的避風港。在這裡，清晨的第一縷陽光會穿過葉縫灑落在您的床頭，而遠方海風攜帶的微鹹氣息，正輕輕訴說著南國的浪漫。</p>
-                        <p>我們深信旅行的真諦在於「連結」——與自然的連結、與摯友的暢談、以及與家人的溫馨時刻。整棟別墅設計融合了原始與現代，讓您在享受頂級設施的同時，亦能感受到大地最原始的律動。無論是在池畔舉杯，還是仰望恆春最純粹的星空，這裡的每一刻，都值得您屏息珍藏。</p>
-                        <p>雖然身處世外桃源般的靜謐，但您並未與世界脫節。附近就有全聯與便利商店2分鐘到市區，以及短短 10 分鐘車程即可抵達的南灣湛藍海域，讓您的渡假生活在便利與夢幻之間取得完美平衡。</p>
+                        <p>想找<strong>墾丁包棟</strong>或<strong>恆春包棟</strong>嗎？迪噢叢林旅宿座落於恆春半島，被翠綠草原擁抱，是為嚮往自由的靈魂所打造的避風港。不論是家庭聯誼還是公司旅遊，我們提供最放鬆的私人空間。</p>
+                        <p>我們深信旅行的真諦在於「連結」——與自然的連結、與摯友的暢談。整棟別墅設計融合了原始與現代，讓您在享受頂級設施的同時，亦能感受到大地最原始的律動。我們更是著名的<strong>墾丁寵物友善民宿</strong>，歡迎毛孩一同入住。</p>
+                        <p>位於恆春核心地帶，步行可達全聯與便利商店。距離南灣湛藍海域僅 10 分鐘車程，讓您的渡假生活在便利與夢幻之間取得完美平衡，公認是<strong>CP值最高</strong>的包棟選擇。</p>
                     </div>
                 </div>
                 <div class="magazine-img-wrapper" data-aos="fade-left">
@@ -1470,7 +1483,7 @@
         <div class="container">
             <div class="section-title" data-aos="fade-up">
                 <span>Accommodation</span>
-                <h2 class="serif">精選房型</h2>
+                <h2 class="serif">熱門房型展示</h2>
                 <div class="divider"></div>
             </div>
 
@@ -1485,7 +1498,7 @@
                         <a href="photo/double/img_3656.jpg" data-fancybox="double"></a>
                     </div>
                     <div class="room-info">
-                        <h3 class="serif">雙人房</h3>
+                        <h3 class="serif">精緻雙人房</h3>
                         <p>簡潔優雅的兩人世界，墾丁假期的浪漫起點。</p>
                         <div class="amenities">
                             <div class="amenity-item"><i class="fas fa-bed"></i> KING SIZE BED</div>
@@ -1503,7 +1516,7 @@
                         <a href="photo/quad/bc_9875-hdr.jpg" data-fancybox="quad"></a>
                     </div>
                     <div class="room-info">
-                        <h3 class="serif">四人房</h3>
+                        <h3 class="serif">溫馨四人房</h3>
                         <p>好友出遊的絕佳選擇，舒適的大床讓您一夜好眠。</p>
                         <div class="amenities">
                             <div class="amenity-item"><i class="fas fa-bed"></i> TWO BEDS</div>
@@ -1578,7 +1591,7 @@
                         <a href="photo/kids-pink/unnamed.jpg" data-fancybox="kids-pink"></a>
                     </div>
                     <div class="room-info">
-                        <h3 class="serif">親子家庭房 (粉)</h3>
+                        <h3 class="serif">親子溜滑梯房 (粉)</h3>
                         <p>溫馨夢幻的粉色空間，專為小家庭設計的童趣客房。</p>
                         <div class="amenities">
                             <div class="amenity-item"><i class="fas fa-bed"></i> 1 QUEEN + 1 SINGLE</div>
@@ -1597,7 +1610,7 @@
                         <a href="photo/kids-green/ee87f50a-9dca-431d-b892-3c312d8c32bc.jpg" data-fancybox="kids-green"></a>
                     </div>
                     <div class="room-info">
-                        <h3 class="serif">親子家庭房 (綠)</h3>
+                        <h3 class="serif">親子溜滑梯房 (綠)</h3>
                         <p>清新自然的綠意氛圍，結合溜滑梯設施的親子樂園。</p>
                         <div class="amenities">
                             <div class="amenity-item"><i class="fas fa-bed"></i> 1 QUEEN + 1 SINGLE</div>
@@ -1609,7 +1622,7 @@
 
             <!-- Global Amenities -->
             <div class="global-amenities" data-aos="fade-up">
-                <h2 class="serif">設施指南</h2>
+                <h2 class="serif">包棟設施指南</h2>
                 <div class="amenities-grid">
                     <div class="amenity-box"><i class="fas fa-parking"></i><span>專屬停車場</span></div>
                     <div class="amenity-box"><i class="fas fa-microphone"></i><span>專業KTV設備</span></div>
@@ -1677,38 +1690,38 @@
         <div class="container">
             <div class="section-title" data-aos="fade-up">
                 <span>Q & A</span>
-                <h2 class="serif">常見問題</h2>
+                <h2 class="serif">恆春包棟常見問題</h2>
                 <div class="divider"></div>
             </div>
             
             <div class="faq-grid">
                 <div class="faq-item" data-aos="fade-up">
-                    <h4>Q1：包棟大約可以容納幾多人？適合員工或家族旅遊嗎？</h4>
-                    <p>A：非常適合！我們可容納26人擁有多種房型（包含雙人、四人、樓中樓及親子房），空間寬敞。無論是幾個家庭聯合出遊，還是中小型公司的員工旅遊，我們的大型交誼廳與開放式空間都能讓大家齊聚一堂，不會感到擁擠。</p>
+                    <h4>Q1：恆春包棟推薦哪一家？迪噢叢林可以容納多少人？</h4>
+                    <p>A：迪噢叢林旅宿是<strong>恆春包棟</strong>首選！我們空間寬敞，最多可容納26人入住。擁有雙人、四人、樓中樓及受歡迎的親子溜滑梯房，非常適合大型家族旅遊或公司員工旅遊。</p>
                 </div>
                 <div class="faq-item" data-aos="fade-up" data-aos-delay="100">
-                    <h4>Q2：我們有帶小朋友，民宿有適合親子的設施嗎？</h4>
-                    <p>A：有的！我們特別設計了家庭房，房內附有小朋友最愛的溜滑梯設施，讓房間本身就是個小樂園。此外，民宿外圍有大片安全的草地，非常適合孩子們跑跳放電。</p>
+                    <h4>Q2：墾丁寵物友善民宿有推薦的嗎？毛孩可以入住嗎？</h4>
+                    <p>A：我們是墾丁知名的<strong>寵物友善民宿</strong>！非常歡迎您帶毛孩一同渡假。我們提供廣大的戶外草皮讓毛孩跑跳，僅需一次性清潔費500元即可入住指定房型。</p>
                 </div>
                 <div class="faq-item" data-aos="fade-up" data-aos-delay="200">
-                    <h4>Q3：請問可以帶寵物（毛孩）一起入住嗎？</h4>
-                    <p>A：當然可以！迪噢叢林旅宿是寵物友善民宿，我們非常歡迎毛孩與主人一起渡假。寵物入住會收取一次性費用 $500/隻，活動範圍以一樓交誼廳及指定的一樓客房為主。戶外的草皮絕對是狗狗們最愛的跑跳天堂！</p>
+                    <h4>Q3：迪噢叢林民宿有哪些娛樂與烤肉設施？</h4>
+                    <p>A：我們提供完整的<strong>包棟設施</strong>：包含專業KTV、電動麻將、烤肉設備與開放式廚房。且鄰近恆春市區全聯，採買食材與酒水非常方便，是<strong>CP值最高</strong>的包棟選擇。</p>
                 </div>
                 <div class="faq-item" data-aos="fade-up">
-                    <h4>Q4：晚餐想在民宿烤肉或煮東西可以嗎？採買方便嗎？</h4>
-                    <p>A：絕對沒問題！我們提供「烤肉設備」與「開放式廚房」，讓大家可以一起享受下廚與烤肉的樂趣。最棒的是，民宿附近就有全聯福利中心與便利商店，即使臨時缺了酒水或烤肉食材，隨時都能輕鬆補給！</p>
+                    <h4>Q4：預訂恆春包棟房型有包含早餐嗎？採買方便嗎？</h4>
+                    <p>A：我們專營包棟服務，提供開放式廚房供房客自由使用。最棒的是民宿步行即可到達全聯與便利商店，採買新鮮食材非常方便，讓您享受下廚樂趣。</p>
                 </div>
                 <div class="faq-item" data-aos="fade-up" data-aos-delay="100">
-                    <h4>Q5：民宿內有什麼娛樂設施？</h4>
-                    <p>A：我們為包棟旅客準備了豐富的娛樂設備！包含專業 KTV 系統、電動麻將桌，以及充滿懷舊風情的電動機台。無論是長輩打牌、年輕人唱歌，還是小朋友玩遊戲，所有人都能找到屬於自己的樂趣。</p>
+                    <h4>Q5：這間民宿適合帶小朋友來嗎？有親子設施嗎？</h4>
+                    <p>A：非常適合！我們設有專門的<strong>親子溜滑梯房</strong>，讓房間就是小樂園。戶外大草皮也非常安全，是許多家庭推薦的<strong>恆春親子包棟</strong>首選。</p>
                 </div>
                 <div class="faq-item" data-aos="fade-up" data-aos-delay="200">
-                    <h4>Q6：停車方便嗎？</h4>
-                    <p>A：我們設有「專屬停車場」，空間充足，即使是多個家庭開多部車前來，也完全不用擔心尋找車位的煩惱。</p>
+                    <h4>Q6：民宿有提供停車位嗎？位置好找嗎？</h4>
+                    <p>A：有的！我們設有「專屬停車場」，空間充足。位置鄰近恆春古城，導航「迪噢叢林旅宿」即可輕鬆抵達，不用擔心找車位的煩惱。</p>
                 </div>
                 <div class="faq-item" data-aos="fade-up">
-                    <h4>Q7：如何預訂及確認保留房間？</h4>
-                    <p>A：您可以直接點擊網頁上的「一鍵加 LINE 預約」與我們聯繫確認檔期，即可為您保留這片專屬的叢林秘境。</p>
+                    <h4>Q7：如何確認保留房間與預約？</h4>
+                    <p>A：您可以點擊網頁上的「一鍵加 LINE 預約」與我們聯繫。我們提供最即時的檔期查詢服務，為您保留這片專屬的墾丁渡假秘境。</p>
                 </div>
             </div>
         </div>
@@ -1753,7 +1766,7 @@
                     <h3 class="serif">與毛孩一起旅行 🐾</h3>
                     <ul class="rules-list pet-rules">
                         <li>寵物入住收取一次性費用每隻500元。</li>
-                        <li>寵物請勿上床，不可共用房內毛浴巾。</li>
+                        <li>寵物請勿上床，不可共用房內毛浴巾.</li>
                         <li>因衛生考慮，請主人自行準備毛孩食盤及寵物床。</li>
                         <li>請勿將寵物單獨放置民宿內。</li>
                         <li>請固定帶寵物到戶外上廁所。</li>
