Update landmarks and transportation section with more nearby locations

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         "photo/public/1.jpg",
         "photo/house.png"
       ],
-      "description": "位於恆春墾丁的CP值最高包棟民宿。我們是寵物友善旅宿，提供專業KTV設備、戶外烤肉區、電動麻將桌及寬敞開放式廚房。空間可容納26人，擁有大片草地與親子溜滑梯房型。非常適合家族旅遊、公司員工旅遊。鄰近恆春市區全聯，生活機能極佳。",
+      "description": "位於恆春墾丁的CP值最高包棟Villa民宿。我們是寵物友善旅宿，提供專業KTV設備、戶外烤肉區、電動麻將桌及寬敞開放式廚房. 空間可容納26人，擁有大片草地與親子溜滑梯房型。非常適合家族旅遊、公司員工旅遊。鄰近恆春市區全聯，生活機能極佳。",
       "address": {
         "@type": "PostalAddress",
         "streetAddress": "龍泉路3巷10號",
@@ -1123,7 +1123,7 @@
 
         .landmark-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
             gap: 30px;
             margin-top: 30px;
         }
@@ -1146,6 +1146,8 @@
         .landmark-item i {
             font-size: 1.5rem;
             color: var(--accent);
+            width: 30px;
+            text-align: center;
         }
 
         .landmark-info h4 {
@@ -1721,7 +1723,7 @@
                 </div>
                 <div class="faq-item" data-aos="fade-up">
                     <h4>Q7：如何確認保留房間與預約？</h4>
-                    <p>A：您可以點擊網頁上的「一鍵加 LINE 預約」與我們聯繫。我們提供最即時的檔期查詢服務，為您保留這片專屬的墾丁渡假秘境。</p>
+                    <p>A：您可以點擊網頁上的「一鍵加 LINE 預約」與我們聯繫. 我們提供最即時的檔期查詢服務，為您保留這片專屬的墾丁渡假秘境。</p>
                 </div>
             </div>
         </div>
@@ -1866,8 +1868,8 @@
                 <div class="landmark-item">
                     <i class="fas fa-shopping-cart"></i>
                     <div class="landmark-info">
-                        <h4>全聯福利中心</h4>
-                        <p>車程約 3 分鐘，採買食材超方便</p>
+                        <h4>全聯福利中心 / 超商</h4>
+                        <p>車程約 2 分鐘，採買食材超方便</p>
                     </div>
                 </div>
                 <div class="landmark-item">
@@ -1882,6 +1884,27 @@
                     <div class="landmark-info">
                         <h4>恆春古城 / 市區</h4>
                         <p>車程約 2 分鐘，美食匯集地</p>
+                    </div>
+                </div>
+                <div class="landmark-item">
+                    <i class="fas fa-map-signs"></i>
+                    <div class="landmark-info">
+                        <h4>墾丁大街</h4>
+                        <p>車程約 12 分鐘，熱鬧夜生活</p>
+                    </div>
+                </div>
+                <div class="landmark-item">
+                    <i class="fas fa-fish"></i>
+                    <div class="landmark-info">
+                        <h4>海生館</h4>
+                        <p>車程約 15 分鐘，親子必遊景點</p>
+                    </div>
+                </div>
+                <div class="landmark-item">
+                    <i class="fas fa-ship"></i>
+                    <div class="landmark-info">
+                        <h4>後壁湖漁港</h4>
+                        <p>車程約 15 分鐘，大口新鮮海產</p>
                     </div>
                 </div>
             </div>
