chore: final adjustments to SEO and GA4 tracking

--- a/index.html
+++ b/index.html
@@ -1718,7 +1718,7 @@
                     <p>A：我們提供完整的<strong>包棟設施</strong>：包含專業KTV、電動麻將、烤肉設備與開放式廚房. 且鄰近恆春市區全聯，採買食材與酒水非常方便，是<strong>CP值最高</strong>的包棟選擇.</p>
                 </div>
                 <div class="faq-item" data-aos="fade-up">
-                    <h4>Q4：位置方便嗎？附近有採買方便嗎？</h4>
+                    <h4>Q4：位置方便嗎？附近採買方便嗎？</h4>
                     <p>A：民宿附近就有全聯與便利商店，採買新鮮食材非常方便，我們有廚房都可以使用讓您享受下廚樂趣.</p>
                 </div>
                 <div class="faq-item" data-aos="fade-up" data-aos-delay="100">
