建立英文版頁面並實現國際化佈局 (EN/ZH)

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <meta name="description" content="迪噢叢林旅宿提供優質恆春包棟與墾丁包棟服務，Google 4.7星好評推薦！我們是優質墾丁寵物友善民宿，鄰近恆春市區全聯與南灣，提供專業KTV與烤肉設備，是家族旅遊、員工旅遊首選。">
     <meta name="keywords" content="墾丁包棟, 恆春包棟, 寵物友善民宿, 墾丁KTV民宿, 墾丁烤肉民宿, 家族旅遊, 員工旅遊, The Jungle House, 恆春民宿推薦, 墾丁民宿推薦, 恆春親子包棟, 墾丁CP值最高民宿">
     <link rel="icon" href="photo/hengchun-jungle-house-logo.jpg" type="image/jpeg">
+    <link rel="alternate" hreflang="zh-Hant" href="https://dioinn.com/" />
+    <link rel="alternate" hreflang="en" href="https://dioinn.com/en/" />
+    <link rel="alternate" hreflang="x-default" href="https://dioinn.com/" />
     
     <!-- JSON-LD Structured Data -->
     <script type="application/ld+json">
@@ -1474,6 +1477,7 @@
             <li><a href="#pricing">包棟房價</a></li>
             <li><a href="#faq">常見問題</a></li>
             <li><a href="#contact">聯絡我們</a></li>
+            <li><a href="/en">EN</a></li>
         </ul>
     </nav>
 
@@ -1797,7 +1801,7 @@
                 </div>
                 <div class="faq-item" data-aos="fade-up">
                     <h4>Q4：位置方便嗎？附近採買方便嗎？</h4>
-                    <p>A：民宿附近就有全聯與便利商店，採買新鮮食材非常方便，我們有廚房都可以使用讓您享受下廚樂趣.</p>
+                    <p>A：民宿附近就有全聯與便利商店，採買新鮮食材非常方便，我們 have 廚房都可以使用讓您享受下廚樂趣.</p>
                 </div>
                 <div class="faq-item" data-aos="fade-up" data-aos-delay="100">
                     <h4>Q5：這間民宿適合帶小朋友來嗎？有親子設施嗎？</h4>
